style.css
*,
*::before,
*::after {
    padding: 0;
    margin: 0;
    border: 0;
    box-sizing: border-box;
}

body {
    display: flex;
    flex-direction: column;
    height: 100vh;
}

header {
    display: flex;
    justify-content: center;
    align-items: center;
    min-height: 70px;
}

main {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-grow: 1;
}

button {
    cursor: pointer;
    border: 1px palevioletred solid;
    border-radius: 10px;
    font-size: 18px;
    min-width: 30px;
}

.calculator {
    border: 1px palevioletred solid;
    background-image: url(images/calcBackgroundV2.jpg);
    display: flex;
    flex-direction: column;
    align-items: center;
    height: 550px;
    width: 350px;
    padding: 4px;
    gap: 4px;
    border-radius: 10px;
}

.calculator__title {
    font-size: 50px;
    padding-top: 24px;
    color: #5f238b;

}

.calculator__display {
    border: 1px palevioletred solid;
    border-radius: 10px;
    background-color: white;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: end;
    height: 20%;
    width: 90%;
    padding: 8px;
}

.calculator__display__large-area__text {
    font-size: 36px;
    color: #5f238b;

}

.calculator__display__small-area__text {
    color: #5f238b;
}

.calculator__buttons {
    display: grid;
    gap: 1px;
    height: 80%;
    width: 90%;
    grid-template-areas:
        'bracket-1 bracket-1 bracket-2 bracket-2'
        'del rem division division'
        '_7 _8 _9 multiply'
        '_4 _5 _6 minus'
        '_1 _2 _3 plus'
        '_0 dot equal plus';
}

.calculator__buttons__formatters {
    background-color: rgb(255, 44, 118);
    color: white;
}

.calculator__buttons__operands,
.calculator__buttons__numbers,
#dot__46,
#minus__45,
#start-bracket__40,
#end-bracket__41,
#equal__61 {
    background-color: #ffe3bd;
    color: #5f238b;
}

.calculator__buttons__numbers,
#dot__46 {
    background-color: white;
}

#start-bracket__40 {
    grid-area: bracket-1;
}

#end-bracket__41 {
    grid-area: bracket-2;
}


#plus__43 {
    grid-area: plus;
}

#minus__45 {
    grid-area: minus;
}

#multiply__215 {
    grid-area: multiply;
}

#division__247 {
    grid-area: division;
}

#equal__61 {
    grid-area: equal;
}

#delete {
    grid-area: del;
}

#remove {
    grid-area: rem;
}

#dot__46 {
    grid-area: dot;
}

#num-1__49 {
    grid-area: _1;
}

#num-2__50 {
    grid-area: _2;
}

#num-3__51 {
    grid-area: _3;
}

#num-4__52 {
    grid-area: _4;
}

#num-5__53 {
    grid-area: _5;
}

#num-6__54 {
    grid-area: _6;
}

#num-7_55 {
    grid-area: _7;
}

#num-8__56 {
    grid-area: _8;
}

#num-9__57 {
    grid-area: _9;
}

#num-0__48 {
    grid-area: _0;
}

.calculator-footer {
    display: flex;
    text-align: center;
    justify-content: center;
    color: grey;
    height: 5%;
    width: 90%;
}

footer {
    display: flex;
    justify-content: center;
    align-items: center;
    min-height: 70px;
}

